--- a/apiPassword/src/main/resources/templates/users/profile.html
+++ b/apiPassword/src/main/resources/templates/users/profile.html
@@ -10,9 +10,8 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark mb-4">
     <div class="container">
-        <a class="navbar-brand">Generador de Contraseñas</a>
-        <<a class="navbar-brand justify-content-end" th:href="@{/users/logout}">Cerrar sesión</a>
-
+        <a class="navbar-brand generador">Generador de Contraseñas</a>
+        <a class="navbar-brand session justify-content-end" th:href="@{/users/logout}">Cerrar sesión</a>
     </div>
 </nav>
 
@@ -22,7 +21,7 @@
         <div class="col-md-12 information-container">
             <div class="profile-section">
                 <div class="profile-info">
-                    <h1 class="text-center">Welcome <span th:text="${userProfile?.name}">Nombre por defecto</span></h1>
+                    <h1 class="text-center">Bienvenido <span th:text="${userProfile?.name}">Usuario</span></h1>
                     <p><strong>ID de Usuario: </strong> <span th:text="${userProfile.id_user}"></span></p>
                     <p><strong>Nombre: </strong> <span th:text="${userProfile.name}"></span></p>
                     <p><strong>Apellido: </strong> <span th:text="${userProfile.surname}"></span></p>
@@ -67,7 +66,6 @@
                             <tr th:each="passwordDto : ${passwords}">
                                 <td th:text="${passwordDto.password}"></td>
                                 <td th:text="${passwordDto.secure}"></td>
-                                <!-- Ejemplo de botones Editar y Guardar -->
                                 <td>
                                     <button type="button" class="btn btn-success btn-sm">Editar</button>
                                     <button type="button" class="btn btn-primary btn-sm">Guardar</button>
