--- a/apiPassword/src/main/resources/templates/users/profile.html
+++ b/apiPassword/src/main/resources/templates/users/profile.html
@@ -66,7 +66,14 @@
                                 <td class="text-center" th:text="${passwordDto.password}"></td>
                                 <td class="text-center" th:text="${passwordDto.secure}"></td>
                                 <td class="text-center">
-                                    <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-save icon"></i> Guardar</button>
+                                    <form th:action="@{/manager/savePassword}" method="post">
+                                        <input type="hidden" name="id_user" th:value="${userProfile.id_user}">
+                                        <input type="hidden" name="password" th:value="${passwordDto.password}">
+                                        <input type="text" name="description" placeholder="Agrega una descripcion" required>
+                                        <button type="submit" class="btn btn-primary btn-sm">
+                                            <i class="fas fa-save icon"></i> Guardar
+                                        </button>
+                                    </form>
                                 </td>
                             </tr>
                             </tbody>
